<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/Favorite"/>
        <item
            android:id="@+id/nav_alert"
            android:icon="@drawable/ic_baseline_alarm_24"
            android:title="@string/Alert" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/Setting" />



    </group>




</menu>